--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@builderbot/bot": "^1.2.9",
+    "dotenv": "^17.1.0",
     "googleapis": "^150.0.1"
   },
   "devDependencies": {
