--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "dependencies": {
     "@builderbot/bot": "^1.2.9",
     "dotenv": "^17.1.0",
-    "googleapis": "^150.0.1",
-    "node-fetch": "^3.3.2"
+    "googleapis": "^150.0.1"
   },
   "devDependencies": {
     "@types/node": "^24.0.10"
