--- a/pawwibot/.eslintrc.json
+++ b/pawwibot/.eslintrc.json
@@ -4,6 +4,9 @@
       "node": true,
       "es2021": true
     },
+    "globals": {
+      "setInterval": "readonly"
+    },
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
