--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -18,6 +18,7 @@
     "base-bailey-json": "file:",
     "dotenv": "^16.4.7",
     "googleapis": "^148.0.0",
+    "mongodb": "^6.17.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "openai": "^4.91.1"
@@ -32,7 +33,7 @@
     "rollup": "^4.10.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.5.4"
   },
   "author": "",
   "license": "ISC"
