--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^9.30.1"
-  }
+  },
+  "scripts": {
+  "build": "tsc",
+  "start": "node dist/index.js"
+}
 }
