--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@types/node": "^24.0.10",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
-    "eslint": "^9.30.1"
+    "eslint": "^9.30.1",
+    "typescript": "^5.4.0"
   },
   "scripts": {
-  "build": "tsc",
-  "start": "node dist/index.js"
-}
+    "build": "npx tsc",
+    "start": "node dist/index.js"
+  }
 }
