--- a/pawwibot/tsconfig.json
+++ b/pawwibot/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "declaration": false,
+    "target": "ES2020",                // ES2022 está bien, pero bajar a ES2020 mejora compatibilidad sin perder mucho
+    "module": "ESNext",                // Rollup trabaja mejor con módulo ESNext
+    "declaration": false,              // Puedes activarlo si quieres tipos .d.ts
     "declarationMap": false,
     "moduleResolution": "node",
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": false,
+    "sourceMap": true,                 // Para debugging es útil, pon true para build dev
     "outDir": "./dist",
     "baseUrl": "./",
-    "rootDir": "./",
+    "rootDir": "./src",                // Mejor indicar que el root es ./src para evitar incluir archivos no TS
     "incremental": true,
     "skipLibCheck": true,
     "paths": {
@@ -20,8 +20,7 @@
     }
   },
   "include": [
-    "**/*.js",
-    "**/*.ts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
