--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "typescript": "^5.4.0"
   },
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js"
-  }
+  "build": "npx tsc",
+  "start": "node dist/index.js",
+  "lint": "eslint src --ext .ts",
+  "dev": "npm run lint && nodemon ./src/app.ts"
+}
+
+
 }
