--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -21,7 +21,8 @@
     "mongodb": "^6.17.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
-    "openai": "^4.91.1"
+    "openai": "^4.91.1",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
@@ -32,8 +33,7 @@
     "nodemon": "^3.1.10",
     "rollup": "^4.10.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "tsx": "^4.7.1"
   },
   "author": "",
   "license": "ISC"
