--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -5,10 +5,9 @@
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts",
-    "dev": "npm run lint && nodemon ./src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "dependencies": {
@@ -34,6 +33,9 @@
     "rollup": "^4.10.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tsx": "^4.7.1"
+  },
+  "engines": {
+    "node": ">=18.x"
   },
   "author": "",
   "license": "ISC"
