--- a/pawwibot/.gitignore
+++ b/pawwibot/.gitignore
@@ -1,16 +1,8 @@
-# Dependencias y ambiente
 node_modules/
-
-# Código fuente TS (no subir)
-src/
-
-# Archivos de configuración y logs
-*.env
+dist/
+.env
 *.log
 *qr.png
 *_sessions
 *tokens
 .wwebjs*
-
-# Compilados NO ignorar, los subimos
-!dist/
