--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@builderbot/bot": "1.2.5",
