--- a/pawwibot/tsconfig.json
+++ b/pawwibot/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",              
-    "module": "ESNext",              
+    "module": "commonjs",              
 
     "declaration": false,
     "declarationMap": false,
