--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "dev": "tsx src/app.ts",
