--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "node_modules/.bin/tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "dev": "tsx src/app.ts",
@@ -22,7 +22,8 @@
     "mongodb": "^6.17.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
-    "openai": "^4.91.1"
+    "openai": "^4.91.1",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
