--- a/pawwibot/package.json
+++ b/pawwibot/package.json
@@ -17,12 +17,17 @@
     "base-bailey-json": "file:",
     "dotenv": "^16.4.7",
     "googleapis": "^148.0.0",
+    "luxon": "^3.7.1",
     "mongodb": "^4.12.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "openai": "^4.91.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^5.0.3",
+    "@types/express-serve-static-core": "^5.0.7",
+    "@types/http-errors": "^2.0.5",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.4.0",
